tests/neg/leading-infix-miss.scala
def test: Boolean =
  val x = false
  ! true   // error // error
