tests/neg/leading-infix-miss.check
-- [E008] Not Found Error: tests/neg/leading-infix-miss.scala:3:2 ------------------------------------------------------
2 |  val x = false
3 |  ! true   // error // error
  |          ^
  |          value ! is not a member of Boolean.
  |          Note that `!` is treated as an infix operator in Scala 3.
  |          If you do not want that, insert a `;` or empty line in front
  |          or drop any spaces behind the operator.
-- [E007] Type Mismatch Error: tests/neg/leading-infix-miss.scala:3:8 --------------------------------------------------
3 |  ! true   // error // error
  |        ^
  |        Found:    Unit
  |        Required: Boolean
  |
  | longer explanation available when compiling with `-explain`
